@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+        - Added call to Pod::Inherit in Makefile.PL - 
+          currently at author-time only, so we need to add the produced
+          .pod files to the MANIFEST
         - Fixed the has_many prefetch with limit/group deficiency -
           it is now possible to select "top 5 commenters" while
           prefetching all their comments
